edits and asg draft

--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "00a543cd",
    "metadata": {},
    "outputs": [
@@ -56,12 +56,13 @@
     "\n",
     "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so we will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
+    "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
     "    <img src=\"figures/wfsa_classes.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "      A hierarchy of classes graph.\n",
+    "      A hierarchy of automata classes from general to specific in terms of representation power. Weighted transducers can represent anything that weighted acceptors can represent. Weighted acceptors in turn can represent any unweighted finite-state automata.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -86,7 +87,7 @@
     "    <img src=\"figures/nb/simple_nfa.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "     The graph on the left is deterministic whereas the graph on the right is nondeterministic.\n",
+    "     An example of a deterministic automata on the left and a nondeterministic automata on the right. The nondeterministic automata has two arcs leaving the state $2$ both with the label $c$.\n",
     "  </div>\n",
     "</div>"
    ]
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2e4bd14d",
    "metadata": {},
    "outputs": [],
@@ -169,15 +170,16 @@
    "id": "6ced903c",
    "metadata": {},
    "source": [
+    "$\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$\n",
     "The below graph accepts the same string by multiple paths. \n",
     "\n",
     "![multi path](figures/nb/multi_path.svg)\n",
     "\n",
     "\n",
-    "The string $aa$ is accepted along the state sequence $0 \\rightarrow 2 \\rightarrow 1$ and along the state sequence $0 \\rightarrow 3 \\rightarrow 1$. In this case, to compute the score of $aa$ we need to consider both paths. Again we have a couple of options here. The most common approach is to *log-sum-exp* the individual path scores. Again this corresponds to interpreting the path scores as log probabilities. We'll use $LSE(s_1, s_2)$ to denote the *log-sum-exp* of the two scores $s_1$ and $s_2$:\n",
+    "The string $aa$ is accepted along the state sequence $0 \\rightarrow 2 \\rightarrow 1$ and along the state sequence $0 \\rightarrow 3 \\rightarrow 1$. In this case, to compute the score of $aa$ we need to consider both paths. Again we have a couple of options here. The most common approach is to *log-sum-exp* the individual path scores. Again this corresponds to interpreting the path scores as log probabilities. We'll use $\\LSE(s_1, s_2)$ to denote the *log-sum-exp* of the two scores $s_1$ and $s_2$:\n",
     "\n",
     "$$\n",
-    "LSE(s_1, s_2) = \\log \\left( e^{s_1} + e^{s_2}\\right).\n",
+    "\\LSE(s_1, s_2) = \\log \\left( e^{s_1} + e^{s_2}\\right).\n",
     "$$\n",
     "\n",
     "So the overall weight for the string $aa$ in the above graph is given by $\\log \\left(e^{0 + 2} + e^{1 + 3}\\right) = 4.13$."
