--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b504cceb",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "67e2e052",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
    "metadata": {},
    "source": [
     "## Forward and Viterbi\n",
-    "\n",
+    "$\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$\n",
     "The forward score and the viterbi score take a graph as input and return a single scalar result. The *forward score* is the accumulation of the weights of all possible paths from a start state to an accept state in the graph. The weight of the highest scoring path is the *Viterbi score*, and the path itself is the *Viterbi path*.\n",
     "\n",
     "---\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "202d3bbd",
    "metadata": {},
    "outputs": [],
@@ -631,28 +631,40 @@
     "- State sequence $0 \\rightarrow 2 \\rightarrow 3$ with score 5.3\n",
     "- State sequence $1 \\rightarrow 2 \\rightarrow 3$ with score 3.5\n",
     "\n",
-    "The Viterbi score is the maximum over the individual path scores, in this case $\\max\\{4.6, 5.3, 3.5\\} = 5.3$. The Viterbi path is the sequence of labels which correspond to the arcs contributing to the Viterbi score. We represent the Viterbi path as a simple linear graph as below. The forward score is the *log-sum-exp* over all the path scores, in this case $LSE(4.6, 5.3, 3.5) = 5.81$."
+    "The Viterbi score is the maximum over the individual path scores, in this case $\\max\\{4.6, 5.3, 3.5\\} = 5.3$. The Viterbi path is the sequence of labels which correspond to the arcs contributing to the Viterbi score. We represent the Viterbi path as a simple linear graph as below. The forward score is the *log-sum-exp* over all the path scores, in this case $\\LSE(4.6, 5.3, 3.5) = 5.81$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "17a49bff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fsa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-5c208b36bc66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mviterbi_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviterbi_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mviterbi_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"figures/nb/viterbi_path.svg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0misymbols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msymbols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fsa' is not defined"
+     ]
+    }
+   ],
    "source": [
     "viterbi_path = gtn.viterbi_path(fsa)\n",
-    "gtn.draw(viterbi_path, \"figures/nb/viterbi_path_example.svg\", isymbols=symbols)"
+    "gtn.draw(viterbi_path, \"figures/nb/viterbi_path.svg\", isymbols=symbols)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6eaa3f52",
+   "id": "c55a6a17",
    "metadata": {},
    "source": [
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/viterbi_path_example.svg\"/>\n",
+    "    <img src=\"figures/nb/viterbi_path.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "      TODO\n",
@@ -678,10 +690,131 @@
     "\n",
     "To arrive at the overall Viterbi score for the graph we take the max over the Viterbi scores of the accept states, $\\max_a s_a$ where $a$ is an accept state.\n",
     "\n",
-    "To compute the forward score we use the same idea with an $LSE$ in place of the $\\max$.\n",
+    "To compute the forward score we use the same idea with an $\\LSE$ in place of the $\\max$.\n",
     "$$\n",
-    "s_v = LSE\\left(s_{\\textrm{source}(e_1} + w(e_1), \\ldots, s_{\\textrm{source}(e_k)} + w(e_k) \\right)\n",
-    "$$"
+    "s_v = \\LSE_{i=1}^k \\left( s_{\\textrm{source}(e_i)} + w(e_1) \\right),\n",
+    "$$\n",
+    "and the final score is $\\LSE_a s_a$.\n",
+    "\n",
+    "For both the forward and Viterbi score, the recursion works because the $\\LSE$ and $\\max$ operations admit a simple decomposition of the score for all paths terminating at a given state. Suppose, as in the graph below, we have a state $v$ for which we want to compute the score $s_v$. Suppose also that $v$ has only one incoming arc from state $u$ and that state $u$ has three paths terminating with the given scores $p_1$, $p_2$, and $p_3$. We can extend each of the three paths terminating at $u$ to $v$ by adding the arc between them, so there are three paths terminating at $v$ as well.\n",
+    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/dp_recursion.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      TODO\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "First suppose we want to compute the Viterbi score at $v$. The Viterbi score is the maximum of the weights of all three paths terminating at $v$, namely $s_v = \\max \\{w + p_1, w + p_2, w + p_3\\}$. However, assume we are given the Viterbi score, $s_u$, of paths terminating at $u$. In this case we can compute $s_v = w + s_u$. This decomposition is valid, which we can prove by noting that two scores are equal:\n",
+    "\n",
+    "$$\n",
+    "w + s_u = w + \\max \\{p_1, p_2, p_3 \\} = \\max \\{w + p_1, w + p_2, w + p_3\\}.\n",
+    "$$\n",
+    "\n",
+    "The same decomposition works for the forward score and the $\\LSE$ operation:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "s_v &= w + s_u  \\\\\n",
+    "&= w + \\log \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
+    "&= \\log e^w + \\log \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
+    "&= \\log e^w \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
+    "&= \\log \\left(e^{w + p_1} + e^{w + p_2} + e^{w + p_3}\\right) \\\\\n",
+    "&= s_v\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Here we assume only three paths terminating at $u$ for simplicity. In each case, the argument is easily extended to an arbitrary number of paths.\n",
+    "\n",
+    "\n",
+    "### Viterbi Path\n",
+    "\n",
+    "A Viterbi path is a path for which the Viterbi score is attained. We can compute one of the Viterbi paths (usually there will only be one) with a straightforward extension of the Viterbi shortest distance algorithm. At each state when we compute the score, we also maintain a backpointer to the arc which resulted in the maximum score. When the algorithm terminates, we can trace the backpointers to the start state and extract the Viterbi path.\n",
+    "\n",
+    "An example of this can be seen in the graph below.\n",
+    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/nb/viterbi_path_back.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      TODO\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "Each state in the graph is labelled with the Viterbi score over all paths terminating at that state. The red arcs denote are the arcs which result in the maximum score for the state that they point to. In order to compute the Viterbi path, we simply trace the red arcs back from the accept state. In this case the Viterbi path state sequence is $0 \\rightarrow 2 \\rightarrow 4 \\rightarrow 6$ with arc labels $b$, $c$, and $b$.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Compute the Viterbi path of the graph below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "da6f330b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fsa = gtn.Graph()\n",
+    "fsa.add_node(start=True)\n",
+    "fsa.add_node()\n",
+    "fsa.add_node()\n",
+    "fsa.add_node(accept=True)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        fsa.add_arc(i, i+1, j)\n",
+    "fsa.set_weights([0.3, 0.5, 0.2, 0.4, 0.1, 0.7, 0.4, 0.9, 0.1])\n",
+    "gtn.draw(fsa, \"figures/nb/viterbi_path_example_input.svg\", isymbols=symbols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96fac48",
+   "metadata": {},
+   "source": [
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/nb/viterbi_path_example_input.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      TODO\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dbf7d321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtn.draw(gtn.viterbi_path(fsa), \"figures/nb/viterbi_path_example.svg\", isymbols=symbols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "413b690d",
+   "metadata": {},
+   "source": [
+    "The Viterbi path is shown in the graph below.\n",
+    "\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/nb/viterbi_path_example.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      TODO\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "---"
    ]
   }
  ],
